force-app/main/default/objects/Centennial_Campaign__c/fields/Adult_Swim_Improving_Skills_and_Swimming__c.field-meta.xml
<CustomField>
    <fullName>Adult_Swim_Improving_Skills_and_Swimming__c</fullName>
    <label>Adult Swim—Improving Skills and Swimming</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>