force-app/main/default/objects/Centennial_Campaign__c/fields/Adult_Swim_Learning_the_Basics__c.field-meta.xml
<CustomField>
    <fullName>Adult_Swim_Learning_the_Basics__c</fullName>
    <label>Adult Swim—Learning the Basics</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>