force-app/main/default/objects/Centennial_Campaign__c/fields/Basic_Swim_Instructor__c.field-meta.xml
<CustomField>
    <fullName>Basic_Swim_Instructor__c</fullName>
    <label>Basic Swim Instructor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>