force-app/main/default/objects/Centennial_Campaign__c/fields/Centennial_Campaign_Reporting__c.field-meta.xml
<CustomField>
    <fullName>Centennial_Campaign_Reporting__c</fullName>
    <defaultValue>(&quot;The report below is for organizations participating in the Centennial Campaign and is intended to capture high-level participation numbers as a result of the Centennial Campaign collaboration. In addition, please be certain to formally report all of your course activity through normal processes of the Course Record Entry system.&quot;)</defaultValue>
    <label>Centennial Campaign Reporting</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>