force-app/main/default/objects/Centennial_Campaign__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <inlineHelpText>We welcome any comments or anecdotes about your experience and participation in the Centennial Campaign.</inlineHelpText>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>