force-app/main/default/objects/Centennial_Campaign__c/fields/Facility_Name__c.field-meta.xml
<CustomField>
    <fullName>Facility_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Facility Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Centennial Campaigns (Facility Name)</relationshipLabel>
    <relationshipName>Centennial_Campaigns1</relationshipName>
    <type>Lookup</type>
</CustomField>