force-app/main/default/objects/Centennial_Campaign__c/fields/Junior_Lifeguarding__c.field-meta.xml
<CustomField>
    <fullName>Junior_Lifeguarding__c</fullName>
    <label>Junior Lifeguarding</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>