force-app/main/default/objects/Centennial_Campaign__c/fields/Learn_to_Swim_Level_2__c.field-meta.xml
<CustomField>
    <fullName>Learn_to_Swim_Level_2__c</fullName>
    <label>Learn-to-Swim Level 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>