force-app/main/default/objects/Centennial_Campaign__c/fields/Lifeguarding_Instructor__c.field-meta.xml
<CustomField>
    <fullName>Lifeguarding_Instructor__c</fullName>
    <label>Lifeguarding Instructor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>