force-app/main/default/objects/Centennial_Campaign__c/fields/Lifeguarding_Management__c.field-meta.xml
<CustomField>
    <fullName>Lifeguarding_Management__c</fullName>
    <label>Lifeguarding Management</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>