force-app/main/default/objects/Centennial_Campaign__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Centennial Campaigns</relationshipLabel>
    <relationshipName>Centennial_Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>