force-app/main/default/objects/Centennial_Campaign__c/fields/Organization_Name__c.field-meta.xml
<CustomField>
    <fullName>Organization_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Organization Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Centennial Campaigns</relationshipLabel>
    <relationshipName>Centennial_Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>