force-app/main/default/objects/Centennial_Campaign__c/fields/Parent_and_Child_Aquatics__c.field-meta.xml
<CustomField>
    <fullName>Parent_and_Child_Aquatics__c</fullName>
    <label>Parent and Child Aquatics</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>