force-app/main/default/objects/Centennial_Campaign__c/fields/Parents_Caregivers_Pediatric_CPR_AED__c.field-meta.xml
<CustomField>
    <fullName>Parents_Caregivers_Pediatric_CPR_AED__c</fullName>
    <label>Parents/Caregivers - Pediatric CPR/AED</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>