force-app/main/default/objects/Centennial_Campaign__c/fields/Parents_Caregivers_Water_Safety_Educat__c.field-meta.xml
<CustomField>
    <fullName>Parents_Caregivers_Water_Safety_Educat__c</fullName>
    <label>Parent/Caregivers-Water Safety Education</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>