force-app/main/default/objects/Centennial_Campaign__c/fields/Preschool_Level_2__c.field-meta.xml
<CustomField>
    <fullName>Preschool_Level_2__c</fullName>
    <label>Preschool Level 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>