force-app/main/default/objects/Centennial_Campaign__c/fields/Preschool_Level_3__c.field-meta.xml
<CustomField>
    <fullName>Preschool_Level_3__c</fullName>
    <label>Preschool Level 3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>