force-app/main/default/objects/Centennial_Campaign__c/fields/Reporting_of_Total_Participation__c.field-meta.xml
<CustomField>
    <fullName>Reporting_of_Total_Participation__c</fullName>
    <defaultValue>(&quot;Please report the total number of individuals who participated the Learn-to-Swim program this month, to include Parent and Child Aquatics, Preschool Aquatics, Learn-to-Swim Levels 1 - 3 and Adult Swim.&quot;)</defaultValue>
    <label>Reporting of Total Participation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>