force-app/main/default/objects/Centennial_Campaign__c/fields/Water_Safety_Instructor_Trainer__c.field-meta.xml
<CustomField>
    <fullName>Water_Safety_Instructor_Trainer__c</fullName>
    <label>Water Safety Instructor Trainer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>